[gd_scene load_steps=76 format=3 uid="uid://c4err8c6jno10"]

[ext_resource type="Script" path="res://stages/_debug/spell_select/spell_spinselector.gd" id="1_f4tn8"]
[ext_resource type="Script" path="res://stages/_debug/spell_select/spell_select.gd" id="1_udffm"]
[ext_resource type="StyleBox" uid="uid://bg8tf403k7ydc" path="res://modules/UI/backdrop_panel.tres" id="2_1s4xd"]
[ext_resource type="PackedScene" uid="uid://dai1di82aw08k" path="res://stages/_debug/spell_display/spell_display.tscn" id="3_oahyn"]
[ext_resource type="Script" path="res://modules/UI/item_list_source.gd" id="4_vbbdq"]
[ext_resource type="Resource" uid="uid://5bl7vtr8iyt" path="res://entities/spell_list/prefixes/004-in.tres" id="6_anx2t"]
[ext_resource type="Resource" uid="uid://hps5cjkfrehq" path="res://entities/spell_list/prefixes/005-al.tres" id="7_0qk6w"]
[ext_resource type="Resource" uid="uid://cqcqovcuaa3dm" path="res://entities/spell_list/prefixes/006-(nil).tres" id="8_0gc2u"]
[ext_resource type="Resource" uid="uid://b73mk6t2eboth" path="res://entities/spell_list/prefixes/007-se.tres" id="9_60jvi"]
[ext_resource type="Resource" uid="uid://dsp7jdeao4cex" path="res://entities/spell_list/prefixes/008-ma.tres" id="10_0fm0v"]
[ext_resource type="Resource" uid="uid://ci58kyyqh5kmo" path="res://entities/spell_list/radixes/001-for.tres" id="12_5vj3p"]
[ext_resource type="Resource" uid="uid://b4idn2m7qfu2s" path="res://entities/spell_list/radixes/002-bras.tres" id="13_sdeay"]
[ext_resource type="Resource" uid="uid://cixpftrekavim" path="res://entities/spell_list/radixes/003-acua.tres" id="14_lw801"]
[ext_resource type="Resource" uid="uid://bldvbl31vg10u" path="res://entities/spell_list/radixes/004-lag.tres" id="15_qfxgo"]
[ext_resource type="Resource" uid="uid://bm2obdfpd4sw1" path="res://entities/spell_list/radixes/005-soter.tres" id="16_jtor8"]
[ext_resource type="Resource" uid="uid://chpourt2w0e8b" path="res://entities/spell_list/radixes/006-plan.tres" id="17_x2mux"]
[ext_resource type="Resource" uid="uid://bh8hu1yn3an0q" path="res://entities/spell_list/radixes/007-raj.tres" id="18_8l381"]
[ext_resource type="Resource" uid="uid://cbwyr786s7qn3" path="res://entities/spell_list/radixes/008-frij.tres" id="19_s3uo0"]
[ext_resource type="Resource" uid="uid://b6kqcfy34x3xb" path="res://entities/spell_list/radixes/009-cur.tres" id="20_vf16s"]
[ext_resource type="Resource" uid="uid://ccmu7r136k4x5" path="res://entities/spell_list/radixes/010-bens.tres" id="21_3c64x"]
[ext_resource type="Resource" uid="uid://dskm6orlv40hn" path="res://entities/spell_list/radixes/011-anin.tres" id="22_vodtf"]
[ext_resource type="Resource" uid="uid://bj1mdqyuvyyxs" path="res://entities/spell_list/radixes/012-mald.tres" id="23_1kiil"]
[ext_resource type="Resource" uid="uid://dys7sohk7ihdx" path="res://entities/spell_list/radixes/013-ter.tres" id="24_im3x4"]
[ext_resource type="Resource" uid="uid://cpj0bgsmcqvf" path="res://entities/spell_list/radixes/014-xan.tres" id="25_kjltv"]
[ext_resource type="Resource" uid="uid://sem00ctqudjq" path="res://entities/spell_list/radixes/015-ven.tres" id="26_crmpn"]
[ext_resource type="Resource" uid="uid://cuyt6npgyviq6" path="res://entities/spell_list/radixes/016-hidra.tres" id="27_vx33g"]
[ext_resource type="Resource" uid="uid://iwfj66akc8jx" path="res://entities/spell_list/radixes/017-div.tres" id="28_qo1i2"]
[ext_resource type="Resource" uid="uid://fwd0maq5pdon" path="res://entities/spell_list/radixes/018-mis.tres" id="29_4xqlg"]
[ext_resource type="Resource" uid="uid://rgfcn8vyie3g" path="res://entities/spell_list/radixes/019-yter.tres" id="30_41a77"]
[ext_resource type="Resource" uid="uid://bebqb2s5kgn8j" path="res://entities/spell_list/radixes/020-yxan.tres" id="31_2qtax"]
[ext_resource type="Resource" uid="uid://br0w34ptyv5gj" path="res://entities/spell_list/radixes/021-yven.tres" id="32_yolrr"]
[ext_resource type="Resource" uid="uid://yv4n61jjgn0f" path="res://entities/spell_list/radixes/022-yhidra.tres" id="33_kxgyq"]
[ext_resource type="Resource" uid="uid://dyf13arbkdc1e" path="res://entities/spell_list/radixes/023-ydiv.tres" id="34_c20qp"]
[ext_resource type="Resource" uid="uid://d3vb6ty812f5r" path="res://entities/spell_list/radixes/024-ymis.tres" id="35_gwim3"]
[ext_resource type="Resource" uid="uid://cfsp3vwt33eqp" path="res://entities/spell_list/radixes/025-abs.tres" id="36_su1sm"]
[ext_resource type="Resource" uid="uid://p38lih4gcu75" path="res://entities/spell_list/radixes/026-jis.tres" id="37_ep4g5"]
[ext_resource type="Resource" uid="uid://cu7kj6u120r1m" path="res://entities/spell_list/radixes/027-tat.tres" id="38_erbcj"]
[ext_resource type="Resource" uid="uid://bl274k4mb14p5" path="res://entities/spell_list/radixes/028-vul.tres" id="39_sol84"]
[ext_resource type="Resource" uid="uid://brwl3oac3tah" path="res://entities/spell_list/radixes/029-tsu.tres" id="40_an4oe"]
[ext_resource type="Resource" uid="uid://d4hu3dky6273b" path="res://entities/spell_list/radixes/030-rel.tres" id="41_b8rud"]
[ext_resource type="Resource" uid="uid://cdlg0htd8b2h4" path="res://entities/spell_list/radixes/031-esk.tres" id="42_0i75m"]
[ext_resource type="Resource" uid="uid://cerfrw4oqh0um" path="res://entities/spell_list/radixes/032-vit.tres" id="43_05ske"]
[ext_resource type="Resource" uid="uid://wccile1uirik" path="res://entities/spell_list/radixes/033-agi.tres" id="44_r4oh8"]
[ext_resource type="Resource" uid="uid://dx4m6crj2hk1g" path="res://entities/spell_list/radixes/034-of.tres" id="45_7bcua"]
[ext_resource type="Resource" uid="uid://pg4y4ssqxx32" path="res://entities/spell_list/radixes/035-def.tres" id="46_br5v3"]
[ext_resource type="Resource" uid="uid://cs4ji8vn33qw4" path="res://entities/spell_list/radixes/036-sor.tres" id="47_cegsu"]
[ext_resource type="Resource" uid="uid://b5ugxyyjm3pqp" path="res://entities/spell_list/radixes/037-en.tres" id="48_8hkkq"]
[ext_resource type="Resource" uid="uid://mxi70nfsiir6" path="res://entities/spell_list/radixes/038-yvit.tres" id="49_jxtws"]
[ext_resource type="Resource" uid="uid://bft3jq5n34lbw" path="res://entities/spell_list/radixes/039-yagi.tres" id="50_be8cv"]
[ext_resource type="Resource" uid="uid://bptsdw4d5xta7" path="res://entities/spell_list/radixes/040-yof.tres" id="51_u8iut"]
[ext_resource type="Resource" uid="uid://tx8shiuvyfbq" path="res://entities/spell_list/radixes/041-ydef.tres" id="52_1i81k"]
[ext_resource type="Resource" uid="uid://cjw880qc87yob" path="res://entities/spell_list/radixes/042-ysor.tres" id="53_drp5x"]
[ext_resource type="Resource" uid="uid://5am8nskra0f6" path="res://entities/spell_list/radixes/043-yen.tres" id="54_gqw74"]
[ext_resource type="Resource" uid="uid://vannemsjulog" path="res://entities/spell_list/radixes/044-cor.tres" id="55_180nb"]
[ext_resource type="Resource" uid="uid://cx7vqe8y8x4a7" path="res://entities/spell_list/radixes/045-ycor.tres" id="56_xbnx2"]
[ext_resource type="Resource" uid="uid://cn3gms8hkqnth" path="res://entities/spell_list/radixes/046-tiv.tres" id="57_1tdwd"]
[ext_resource type="Resource" uid="uid://dbfbkat54rodb" path="res://entities/spell_list/radixes/047-bar.tres" id="58_4ipd7"]
[ext_resource type="Resource" uid="uid://8ni53tqr3bb5" path="res://entities/spell_list/radixes/048-cas.tres" id="59_b0dra"]
[ext_resource type="Resource" uid="uid://dnw7eqdrcnfxa" path="res://entities/spell_list/radixes/049-pri.tres" id="60_6k3ei"]
[ext_resource type="Resource" uid="uid://coht33akid3im" path="res://entities/spell_list/radixes/050-cha.tres" id="61_8lfjo"]
[ext_resource type="Resource" uid="uid://5e0o5d682nt1" path="res://entities/spell_list/radixes/051-rep.tres" id="62_aefcj"]
[ext_resource type="Resource" uid="uid://chqp7ikxpwnrw" path="res://entities/spell_list/radixes/052-sop.tres" id="63_cbarn"]
[ext_resource type="Resource" uid="uid://dj1adjubc5ibr" path="res://entities/spell_list/radixes/053-lam.tres" id="64_onal4"]
[ext_resource type="Resource" uid="uid://kp242jnjq1rs" path="res://entities/spell_list/radixes/054-mir.tres" id="65_jvbsx"]
[ext_resource type="Resource" uid="uid://0v0k21q7jq2e" path="res://entities/spell_list/radixes/055-ban.tres" id="66_8ia0o"]
[ext_resource type="Resource" uid="uid://51bfx4xdky23" path="res://entities/spell_list/radixes/056-mak.tres" id="67_i45ee"]
[ext_resource type="Resource" uid="uid://c7xoeseaxsjsc" path="res://entities/spell_list/radixes/057-inf.tres" id="68_3vowc"]
[ext_resource type="Resource" uid="uid://dbmt0sgetvjvx" path="res://entities/spell_list/radixes/058-tou.tres" id="69_ft50l"]
[ext_resource type="Resource" uid="uid://bxh4poqifb5e1" path="res://entities/spell_list/radixes/059-pil.tres" id="70_63ygx"]
[ext_resource type="Resource" uid="uid://b5gw2v2b10wwf" path="res://entities/spell_list/radixes/060-sok.tres" id="71_12v64"]
[ext_resource type="Resource" uid="uid://b7pan7go144wn" path="res://entities/spell_list/radixes/061-rev.tres" id="72_u5ug4"]
[ext_resource type="Resource" uid="uid://c5cdap1g6arwd" path="res://entities/spell_list/radixes/062-aza.tres" id="73_bjofa"]
[ext_resource type="Resource" uid="uid://bvxujw7bp7wj" path="res://entities/spell_list/postfixes/001-tchi.tres" id="74_856sy"]
[ext_resource type="Resource" uid="uid://xeenhvum8jjd" path="res://entities/spell_list/postfixes/002-tchu.tres" id="75_cx4gp"]
[ext_resource type="Resource" uid="uid://cjid8u1xe2agw" path="res://entities/spell_list/postfixes/003-kai.tres" id="76_vhvea"]

[node name="SpellSelect" type="CanvasLayer"]
script = ExtResource("1_udffm")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_1s4xd")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="spell_spinselector" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("1_f4tn8")

[node name="Prefixes" type="ItemList" parent="MarginContainer/PanelContainer/VBoxContainer/spell_spinselector"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
item_count = 5
item_0/text = "in"
item_1/text = "al"
item_2/text = "-"
item_3/text = "se"
item_4/text = "ma"
script = ExtResource("4_vbbdq")
source_label = "display_name"
source_list = [ExtResource("6_anx2t"), ExtResource("7_0qk6w"), ExtResource("8_0gc2u"), ExtResource("9_60jvi"), ExtResource("10_0fm0v")]

[node name="Radixes" type="ItemList" parent="MarginContainer/PanelContainer/VBoxContainer/spell_spinselector"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
item_count = 62
item_0/text = "for"
item_1/text = "bras"
item_2/text = "acua"
item_3/text = "lag"
item_4/text = "soter"
item_5/text = "plan"
item_6/text = "raj"
item_7/text = "frij"
item_8/text = "cur"
item_9/text = "bens"
item_10/text = "anin"
item_11/text = "mald"
item_12/text = "ter"
item_13/text = "xan"
item_14/text = "ven"
item_15/text = "hidra"
item_16/text = "div"
item_17/text = "mis"
item_18/text = "yter"
item_19/text = "yxan"
item_20/text = "yven"
item_21/text = "yhidra"
item_22/text = "ydiv"
item_23/text = "ymis"
item_24/text = "abs"
item_25/text = "jis"
item_26/text = "tat"
item_27/text = "vul"
item_28/text = "tsu"
item_29/text = "rel"
item_30/text = "esk"
item_31/text = "vit"
item_32/text = "agi"
item_33/text = "of"
item_34/text = "def"
item_35/text = "sor"
item_36/text = "en"
item_37/text = "yvit"
item_38/text = "yagi"
item_39/text = "yof"
item_40/text = "ydef"
item_41/text = "ysor"
item_42/text = "yen"
item_43/text = "cor"
item_44/text = "ycor"
item_45/text = "tiv"
item_46/text = "bar"
item_47/text = "cas"
item_48/text = "pri"
item_49/text = "cha"
item_50/text = "rep"
item_51/text = "sop"
item_52/text = "lam"
item_53/text = "mir"
item_54/text = "ban"
item_55/text = "mak"
item_56/text = "inf"
item_57/text = "tou"
item_58/text = "pil"
item_59/text = "sok"
item_60/text = "rev"
item_61/text = "aza"
script = ExtResource("4_vbbdq")
source_label = "display_name"
source_list = [ExtResource("12_5vj3p"), ExtResource("13_sdeay"), ExtResource("14_lw801"), ExtResource("15_qfxgo"), ExtResource("16_jtor8"), ExtResource("17_x2mux"), ExtResource("18_8l381"), ExtResource("19_s3uo0"), ExtResource("20_vf16s"), ExtResource("21_3c64x"), ExtResource("22_vodtf"), ExtResource("23_1kiil"), ExtResource("24_im3x4"), ExtResource("25_kjltv"), ExtResource("26_crmpn"), ExtResource("27_vx33g"), ExtResource("28_qo1i2"), ExtResource("29_4xqlg"), ExtResource("30_41a77"), ExtResource("31_2qtax"), ExtResource("32_yolrr"), ExtResource("33_kxgyq"), ExtResource("34_c20qp"), ExtResource("35_gwim3"), ExtResource("36_su1sm"), ExtResource("37_ep4g5"), ExtResource("38_erbcj"), ExtResource("39_sol84"), ExtResource("40_an4oe"), ExtResource("41_b8rud"), ExtResource("42_0i75m"), ExtResource("43_05ske"), ExtResource("44_r4oh8"), ExtResource("45_7bcua"), ExtResource("46_br5v3"), ExtResource("47_cegsu"), ExtResource("48_8hkkq"), ExtResource("49_jxtws"), ExtResource("50_be8cv"), ExtResource("51_u8iut"), ExtResource("52_1i81k"), ExtResource("53_drp5x"), ExtResource("54_gqw74"), ExtResource("55_180nb"), ExtResource("56_xbnx2"), ExtResource("57_1tdwd"), ExtResource("58_4ipd7"), ExtResource("59_b0dra"), ExtResource("60_6k3ei"), ExtResource("61_8lfjo"), ExtResource("62_aefcj"), ExtResource("63_cbarn"), ExtResource("64_onal4"), ExtResource("65_jvbsx"), ExtResource("66_8ia0o"), ExtResource("67_i45ee"), ExtResource("68_3vowc"), ExtResource("69_ft50l"), ExtResource("70_63ygx"), ExtResource("71_12v64"), ExtResource("72_u5ug4"), ExtResource("73_bjofa")]

[node name="Postfixes" type="ItemList" parent="MarginContainer/PanelContainer/VBoxContainer/spell_spinselector"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
item_count = 3
item_0/text = "tchi"
item_1/text = "tchu"
item_2/text = "kai"
script = ExtResource("4_vbbdq")
source_label = "display_name"
source_list = [ExtResource("74_856sy"), ExtResource("75_cx4gp"), ExtResource("76_vhvea")]

[node name="SpellDisplay" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_oahyn")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Cancel" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="SelectSpell" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select Spell"

[connection signal="source_item_selected" from="MarginContainer/PanelContainer/VBoxContainer/spell_spinselector/Prefixes" to="." method="_on_prefixes_source_item_selected"]
[connection signal="source_item_selected" from="MarginContainer/PanelContainer/VBoxContainer/spell_spinselector/Radixes" to="." method="_on_radixes_source_item_selected"]
[connection signal="source_item_selected" from="MarginContainer/PanelContainer/VBoxContainer/spell_spinselector/Postfixes" to="." method="_on_postfixes_source_item_selected"]
[connection signal="button_down" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/SelectSpell" to="." method="_on_select_spell_button_down"]
